k8s/manifest_2/bases/back_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamatodo-back
  labels:
    app: yamatodo-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yamatodo-back
  template:
    metadata:
      labels:
        app: yamatodo-back
    spec:
      initContainers:           # 修正: データベースが準備完了になるまで待機するinitContainer
      - name: wait-for-db
        image: busybox
        command: ['sh', '-c', 'until nslookup yama-db.default.svc.cluster.local; do echo waiting for db; sleep 5; done;sleep 10'] #nslookupが成功して名前解決できた後、さらに10秒間待機
      containers:
      - name: back-app
        image: tamako8782/mytodoapp:back-prodv2
        imagePullPolicy: Always  # ここを追加
        
        resources:
          limits:
            memory: "512Mi"  # リクエストを512Miに増やす
            cpu: "500m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: yamasec
