k8s/manifest_2/bases/db_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamatodo-db
  labels:
    app: yamatodo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yamatodo-db
  template:
    metadata:
      labels:
        app: yamatodo-db
    spec:
      containers:
      - name: yama-db
        image: mysql:8.2.0  
        ports:
        - containerPort: 3306  
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql  
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mysqladmin ping -h 127.0.0.1
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            memory: "1Gi" 
            cpu: "1000m"

      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
