k8s/manifest_2/bases/front_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamatodo
  labels:
    app: yamatodofront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yamatodofront
  template:
    metadata:
      labels:
        app: yamatodofront
    spec:
      containers:
        - name: front-app
          image: tamako8782/mytodoapp:front-prodv2 
          imagePullPolicy: Always 
          resources:
            limits:
              memory: "512Mi"  
              cpu: "500m"
          ports:
          - containerPort: 80
      imagePullSecrets:
      - name: yamasec
